deploy.yml
apiVersion: v1
kind: Service
metadata:
  name: chess-frontend
spec:
  ports:
    - port: 80
  selector:
    app: chess-frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chess-frontend
spec:
  selector:
    matchLabels:
      app: chess-frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: chess-frontend
    spec:
      containers:
        - image: marcusbuffett/chess-frontend:latest
          name: chess-frontend
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 0
            periodSeconds: 2
      imagePullSecrets:
        - name: docker-hub-secret-key
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chess-frontend
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: chessmadra.com
      http: &http_rules
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: chess-frontend
                port:
                  number: 80
    - host: chessbook.com
      http: *http_rules
  tls:
    - hosts:
        - chessmadra.com
        - chessbook.com
      secretName: chessbook-cert-prod
---
apiVersion: v1
kind: Service
metadata:
  name: chess-frontend-staging
spec:
  ports:
    - port: 80
  selector:
    app: chess-frontend-staging
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chess-frontend-staging
spec:
  selector:
    matchLabels:
      app: chess-frontend-staging
  replicas: 1
  template:
    metadata:
      labels:
        app: chess-frontend-staging
    spec:
      containers:
        - image: marcusbuffett/chess-frontend-staging:latest
          name: chess-frontend-staging
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 0
            periodSeconds: 2
      imagePullSecrets:
        - name: docker-hub-secret-key
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chess-frontend-staging
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: staging.chessmadra.com
      http: &http_rules
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: chess-frontend-staging
                port:
                  number: 80
    - host: staging.chessbook.com
      http: *http_rules
  tls:
    - hosts:
        - staging.chessmadra.com
        - staging.chessbook.com
      secretName: chessbook-cert-staging
